--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#__nuxt {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+    #main {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+
+        #content {
+            flex: 1;
+        }
+    }
+}
